# NuqlsPackage

./: LICENCE.txt  README.md  pyproject.toml  setup.py  setup_prev.py
examples/: classification.ipynb  regressionsmall.ipynb
nuqls/: classification.py  posterior.py  regression.py  regressionfull.py  utils.py
nuqls.egg-info/: top_level.txt
src/: classification.py  posterior.py  regression.py  regressionfull.py
