[build-system]
requires = ["setuptools"] 
build-backend = "setuptools.build_meta"

[project]
name = "nuqls"
version = "0.0.113"
authors = [
    { name="Joseph Wilson", email="joseph.wilson1@uqconnect.edu.au" },
]
description = "TODO"
readme = "README.md"
requires-python = ">=3.8.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Github" = "https://github.com/josephwilsonmaths/NuqlsPackage"